--- a/dcit-205-ia/src/index.css
+++ b/dcit-205-ia/src/index.css
@@ -8,6 +8,7 @@
 :root{
 	--primary: #153D6F;
 	--secondary: #B5975D;
+	--paleBlue: rgba(21, 61, 111, 0.2);
 }
 
 body {
@@ -16,8 +17,9 @@ body {
 
 section {
 	width: 100%;
-	padding: 50px 10%;
+	padding: 30px 10%;
     margin: auto;
+	margin-top: 80px;
 }
 
 h1 {
@@ -33,6 +35,18 @@ h2 {
 
 p {
 	font-size: 1.3rem;
+}
+
+a {
+	text-decoration: none;
+	color:inherit;
+}
+
+.centered
+{
+	display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .primary-button, .secondary-button {
@@ -86,21 +100,21 @@ footer, .footer-body {
 	justify-content: space-around;
 }
 
-.footer-body > ul > li {
+.footer-body > ul > a {
 	margin-right: 20px;
 	margin-bottom: 20px;
 	transition: 0.3s;
 }
 
-.footer-body > ul > li:hover {
+.footer-body > ul > a:hover {
 	font-weight: bold;
 	color: var(--primary);
 }
 
-.footer-body > ul > li:nth-child(3n){
+.footer-body > ul > a:nth-child(3n){
 	margin-right: 0px;
 }
-.footer-body > ul > li:nth-last-child(-n+3){
+.footer-body > ul > a:nth-last-child(-n+3){
 	margin-bottom: 0px;
 }
 
